--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@unocss/transformer-directives": "^0.62.3",
     "@vitejs/plugin-vue": "^5.1.2",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
+    "@vueuse/core": "^11.0.3",
     "cz-conventional-changelog-zh": "^0.0.2",
     "cz-customizable": "^7.2.1",
     "happy-dom": "^15.7.3",
