feat(vite): vite设置alias将~作为src的别名

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,8 +22,9 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
 
-        // type
-        // "types": ["element-plug/global"] 
+        "paths": {
+          "~/*": ["./src/*"]
+        } 
       },
       "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "types/**/*.ts"]
     }
