--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.1",
     "vitest": "^2.0.5",
+    "vue-command-palette": "^0.2.3",
     "vue-tsc": "^2.0.29"
   },
   "config": {
